--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.4.0",
+    "morgan": "^1.10.0",
+    "os": "^0.1.2",
+    "process": "^0.11.10"
   }
 }
